--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "next-firebase-auth-edge": "^1.11.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
